# ChangeLog for dev-lua/luaexpat
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lua/luaexpat/ChangeLog,v 1.14 2014/03/04 20:37:39 vincent Exp $

  04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org>
  luaexpat-1.2.0-r1.ebuild:
  Add ~mips keyword.

  22 Feb 2014; Jeroen Roovers <jer@gentoo.org> luaexpat-1.2.0-r1.ebuild:
  Marked ~hppa (bug #495254).

  08 Aug 2013; Markus Meier <maekke@gentoo.org> luaexpat-1.2.0-r1.ebuild:
  add ~arm, bug #476264

  31 Dec 2012; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Remove myself as a maintainer.

  30 Sep 2012; Dirkjan Ochtman <djc@gentoo.org> luaexpat-1.2.0-r1.ebuild:
  Port src_install() to emake (bug 436480).

  30 Sep 2012; Dirkjan Ochtman <djc@gentoo.org> -luaexpat-1.2.0.ebuild:
  Remove old version.

  28 Sep 2012; Johannes Huber <johu@gentoo.org> luaexpat-1.2.0-r1.ebuild:
  Stable for x86, wrt bug #429606

  28 Sep 2012; Agostino Sarubbo <ago@gentoo.org> luaexpat-1.2.0-r1.ebuild:
  Stable for amd64, wrt bug #429606

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> luaexpat-1.2.0.ebuild,
  luaexpat-1.2.0-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*luaexpat-1.2.0-r1 (01 Mar 2012)

  01 Mar 2012; Dirkjan Ochtman <djc@gentoo.org>
  +files/1.2.0-destdir-ldflags.patch, +luaexpat-1.2.0-r1.ebuild:
  Respect LDFLAGS (bug 336770), bumped EAPI.

  24 Jun 2011; Dirkjan Ochtman <djc@gentoo.org> -luaexpat-1.1.ebuild:
  Remove vulnerable old version.

*luaexpat-1.2.0 (06 Jun 2011)

  06 Jun 2011; Dirkjan Ochtman <djc@gentoo.org> +luaexpat-1.2.0.ebuild,
  +files/luaexpat-1.2.0-makefile.patch:
  Version bump to 1.2.0.

  05 Nov 2010; Rafael G. Martins <rafaelmartins@gentoo.org>
  +files/luaexpat-1.1-makefile.patch:
  Forgot to commit the files/ directory.

  05 Nov 2010; Rafael G. Martins <rafaelmartins@gentoo.org>
  +luaexpat-1.1.ebuild, +metadata.xml:
  Moved from dev-libs to dev-lua. Added myself to metadata.xml.
