@@ -5,13 +5,25 @@ AUX 1.2.0-destdir-ldflags.patch 982 SHA256 3afc9b4bbb9c2d5137a8b44f21d6b2bb57759
 AUX luaexpat-1.1-makefile.patch 607 SHA256 606a86314e3fdfe4a1ea63a1587629e1e3b1e867d98f6739a8f5bbf5431297ef SHA512 23f1ff3edc01242992777a1904800a2657c61b9942e529ab453856a6eae307ffe7cbf7a73794085956377650323a1e51f853cb997c6fe49b36813cf577b94cad WHIRLPOOL 563dab78a2de01f782b896a7ba0c5ad1d0da8f64380721ca5298b1ec12013b5254149ba5a55602fd8586a559a78a0b6e4a7cec531514af944fe2ce6beaed3422
 AUX luaexpat-1.2.0-makefile.patch 607 SHA256 606a86314e3fdfe4a1ea63a1587629e1e3b1e867d98f6739a8f5bbf5431297ef SHA512 23f1ff3edc01242992777a1904800a2657c61b9942e529ab453856a6eae307ffe7cbf7a73794085956377650323a1e51f853cb997c6fe49b36813cf577b94cad WHIRLPOOL 563dab78a2de01f782b896a7ba0c5ad1d0da8f64380721ca5298b1ec12013b5254149ba5a55602fd8586a559a78a0b6e4a7cec531514af944fe2ce6beaed3422
 DIST luaexpat-1.2.0.tar.gz 28621 SHA256 2a7140e9c1923510639e87b60e85d7ddd0cd4e27561663bd9d4031ef90bae5ef SHA512 4f28e36fabcade14f9ae524b8aea19757ceaca9d4ad50c367fe8f58c14c3850efe252df780641159eeb01e96aaba38a9c9c6fe51d21f54a6c4ce33f80c87033f WHIRLPOOL 46f28918e788bfb4ad22f122d3948837fb1134312ee4d111009184cf2e28fcaf250c62427df6de478469fddf5b71be0d3d8677cc9a547598f248bd7fc026334e
+DIST luaexpat-1.3.0.tar.gz 29567 SHA256 d060397960d87b2c89cf490f330508b7def1a0677bdc120531c571609fc57dc3 SHA512 91884653310e2dc89ade6d1653875ac8607640a21853d3ccb1fd0f833812e41981fad5c40101732ec249104d2c50c9a332208d1e44423b8428065a223c60b4ae WHIRLPOOL b79e612fcb394fcbc591fe9eef88d101a65b2ca46d8cc93a64954fdd7dc3ac5751e3e3d1cd497c1ed604b363f3bf535b2a45b957bc224aa21983a9172c0c9c06
 EBUILD luaexpat-1.2.0-r1.ebuild 1348 SHA256 c0bd73e3bd564637308f44c3d797d261565ec0b8b3247b87207b0a39dfa4710b SHA512 40733a60b98535127a383b6c4347788775867042490ce74d2d3a7e4765ef1ce0e5a24ff915d1e4af0aff4ab706596229ee7dea23e0968dc26dbd57687d4b82e1 WHIRLPOOL 91e5de82815f14cbf9ad115f079c7eb1572abe16bad90fbb539bd4feddb656cdcd31430562fb5fe32d3a5916d72ee04eaace821b83e36cba81c7beb7c1643823
-MISC ChangeLog 2308 SHA256 58891074a5fb9097d33d238ba17147c69122e7e041ecaf58d3db7b752d36a1e2 SHA512 b80c8d553a7f76b12939bc524e815087264705cdd764711796ea776527557aada938c9507445a67f16266c4936280119366552e98576bd6f2186dd781cdbbe78 WHIRLPOOL 173280bb502a8658d143e4cd842813e0d25406d9bf3555a96b4d281de70bf4eb648b3245235387c70fe7bbf270264daaee7e7388630e47f5994bf39ccc313d6e
+EBUILD luaexpat-1.3.0.ebuild 1196 SHA256 d433ad103b13c205ec1b38a40622b734cc29b0f3b7677736a91c9f204699baf3 SHA512 6be7537da406adae882725388f3dc761216546ebecd625e0bec59e2312c793550dcd9b57b6fd955689747ec739e6a742b4ab60e4be4b6e4df787a4ec8566523b WHIRLPOOL fa5c25c6bfa5d00c6bed02c5829293f6782288164c2adf5fdd3e3edf032ce25bce3d90894cf57efeccb98979f91f60868e42759609887180e9f9589eabae2c70
+MISC ChangeLog 2443 SHA256 403ff02b60d45608ef4af612be9119532b4f5ebee9dae9d68e72ce1bd0af44e0 SHA512 c987114b5d3777fe2487098f977b7067aaee7aa3e2535b74020d592b077c52b6d110efdc8c5c9fa0f4cd2c03a86a6f1c8853d5fe6ddcc188a7b3083674588e05 WHIRLPOOL 96a20af5dff8f4d5a5a84134a43ac9fcdacb0001e42c3b33069fa27ddc51d32a92628eb73132f2b2380f426f98e33e4ff9aee10cedb751a4009433f14725d951
 MISC metadata.xml 214 SHA256 45ab7209aa33164bd6ad8967d956171537a398cc0a2354557b534bb45c6c79a3 SHA512 0d31b86088d43fcf69c4468f5a8167cbcc86904d94ab44a387bda9b013b33b794d399591cea894f2a6c0c212c62fb14cac6bb800d59bedc2396bc9a8f030f9af WHIRLPOOL e29fab64749a57b42e9f2bfa09afd1cce4792481a1050447b030975c7b34c93bf5e4bbb7c313b52cf997cbd511aedc103d5fda6d2ce2447bfad01ae2b82e4741
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMWOZgACgkQWunnsum7y6iwzQCdFBCMm5tVAfVsUjiofxcAvcAb
-aGoAn17ugrYwrrjX7JeFwFp6t+r9ySOp
-=w+Ri
+iQIcBAEBCAAGBQJTTx1TAAoJEEn8cBKl3gOuMmEQAIQyfEkCTMOCGV0ssI54vSml
+C8NihdKy2dORQ9GhJ9aJ5t7Tl7/6OLTSkJ5nttBSjY+MGtuCGVCMdQn6HCNKKENb
+SElDwDW+MAQGJ2i1hz8DR3MP5mfiWDoFldwSmCjn3sE6aHunFeJsRnxdrZLiC8o2
+jACWNtZex4HHi0aJEY0eRmvWh9XLV/B34wYmFPkizDN8ZXUrlnVZJ5jzi9y5XX3i
+EU6mboKj9sd1XdXMip4xe+nZSfMWvZoBKH6cHlZfmuiZ2rwzBmB7890XHIHlJHne
+qb+VNO1VPBoI+ZlIzoq11OoFdbbyIjZDGJyZ61VZYciNVU2Ac3DYCzY9IYsS4OPJ
+aUa+kzup4kTON+1NWR0YG8/3AytJeJTU1mKZgbsQlgqr1JzvL+1gfQeane9CQYtW
+fmcP464FiLPO1D9IQ5l48a7ZrP2eTMZyM8v0KQxSkD6xlBJ6ZuLM32exm+/s5ZQa
+2VE1PoXn62hqu2+GfpE9EIfAaHwlzosvhlO7CDeWlU2P7nMhwDBol1B595C8JCK+
+PzvK7Ha0yy9QvXfPdoXh8/3W5kNd2Jc0YJfbgZcQwN1ZqSgdGq/hvHUKfs1TrCAs
+zmz7nZNuQKDC65ENAzQOFFaFIpYdvUZ4KsudMG4QEXJgEWTjh0w162fb/go8XqKy
+z2MBIymnwwcQl/78djjs
+=HUWk
 -----END PGP SIGNATURE-----
