@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install
+DEPEND=>=dev-lang/lua-5.1[deprecated] dev-libs/expat virtual/pkgconfig
+DESCRIPTION=LuaExpat is a SAX XML parser based on the Expat library.
+EAPI=4
+HOMEPAGE=http://www.keplerproject.org/luaexpat/
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=MIT
+RDEPEND=>=dev-lang/lua-5.1[deprecated] dev-libs/expat
+SLOT=0
+SRC_URI=http://matthewwild.co.uk/projects/luaexpat/luaexpat-1.3.0.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=4d94abec9e31fa55aa8097baf26f4b02
