@@ -6,8 +6,8 @@ HOMEPAGE=http://prosody.im/
 IUSE=ipv6 libevent mysql postgres sqlite ssl zlib jit
 KEYWORDS=~amd64 ~arm ~x86
 LICENSE=MIT
-RDEPEND=net-im/jabber-base !jit? ( >=dev-lang/lua-5.1 ) jit? ( dev-lang/luajit ) >=net-dns/libidn-1.1 >=dev-libs/openssl-0.9.8 dev-lua/luaexpat dev-lua/luafilesystem ipv6? ( >=dev-lua/luasocket-3 ) !ipv6? ( dev-lua/luasocket ) libevent? ( >=dev-lua/luaevent-0.4.3 ) mysql? ( dev-lua/luadbi[mysql] ) postgres? ( dev-lua/luadbi[postgres] ) sqlite? ( dev-lua/luadbi[sqlite] ) ssl? ( dev-lua/luasec ) zlib? ( dev-lua/lua-zlib )
+RDEPEND=net-im/jabber-base !jit? ( >=dev-lang/lua-5.1 ) jit? ( dev-lang/luajit ) >=net-dns/libidn-1.1 >=dev-libs/openssl-0.9.8 >=dev-lua/luaexpat-1.3.0 dev-lua/luafilesystem ipv6? ( >=dev-lua/luasocket-3 ) !ipv6? ( dev-lua/luasocket ) libevent? ( >=dev-lua/luaevent-0.4.3 ) mysql? ( dev-lua/luadbi[mysql] ) postgres? ( dev-lua/luadbi[postgres] ) sqlite? ( dev-lua/luadbi[sqlite] ) ssl? ( dev-lua/luasec ) zlib? ( dev-lua/lua-zlib )
 SLOT=0
 SRC_URI=http://prosody.im/tmp/0.9.4/prosody-0.9.4.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=e55903de04e5d279cce0f0a0f516e8d5
+_md5_=aebaaa12dc4a569d97632f77c4e8d51b
