@@ -17,23 +17,23 @@ EBUILD prosody-0.8.2.ebuild 2258 SHA256 3673b277ce52116424aaf29a3d320758b3237b47
 EBUILD prosody-0.9.1-r1.ebuild 2230 SHA256 9f2ed749ef5686dbe29a2ace7bcafe176fbcedf41a5759ba86f67deb6d935a65 SHA512 f56127576e6481d35b7e0a10dc25c415bdc54a128e7a9a015492aef3b92bc4bca0c6a0a7f5e83cb788c53bbf94fbab0c9807aa54eb80d500c8fcbe321abd33ec WHIRLPOOL dac6d1ac6d035f42713785d58ac2da4d2571b2c78cb3a889de2dbd969355816af532953ecbccd58938e287bd92103b602549a89ce2acc63a0d0841562c06b52c
 EBUILD prosody-0.9.2.ebuild 2365 SHA256 7c815cc69e10ce2eb7ded2ec37313799a952ed170f8cd92a0f03c8f1469c72fa SHA512 a70ef09431be34024eeb5c583864123a5ecb6cd64d78aeddfa980ba7a1dfcd06962b32636d6058d1021462fd57809662030ebc99d7fdf08b788d7eb1524bc32a WHIRLPOOL 1e500a772f580667358c46aac65a19161b9ff745289690c3fd15af5dab80b48482089768d58768301d28b2a382250a5d1e4c5b2f013b3c9bc2545780a24050ea
 EBUILD prosody-0.9.3.ebuild 2368 SHA256 4e9fb65771db7563c18e4ad9b29eccfefb90c09196488eff4f768b386aef611f SHA512 e610405b0db37c62a021a277dd46b17ea0921508ffe0f8dad966d95ff8d7250950f94649530b97841612580804e3fc008a41d2221c6b67c1514731b80595cc55 WHIRLPOOL 0941d448758d0023419b3b8a03d3a790cecac64d183fa8fbc02129b692979a0b356801b43326549eb4ea5264ad8a88474a6770874083258010a8f5677ddf25d1
-EBUILD prosody-0.9.4.ebuild 2365 SHA256 3d92e47ac1651f394ec056c70d9fa8556f0125991a342a5556b96d124e65b218 SHA512 a92f5701c98060e3b6055e4b1d2a1b04535e52249d2a1e88c2223168ae41cb484f90252ba61503a5fcac61d981366aa378ad84f84184babcfd2bd5a783b191ad WHIRLPOOL 5a9fd2be070edaf908eb03f3b9ecb94872db8fa522f65348c9cb5a13d71e2c6fa9888fa1a10f7eb4b57d23db3fdeec1dcdc14d4a3e7b134e49049a35ca94ccd7
-MISC ChangeLog 5401 SHA256 80bdaf82f9d45e6eee6e420a9b02916ce451c4b8d5196355d82e873a66bf9f46 SHA512 c393789530831615ee1ead26e8f1171c71a63bd49d622d3d94b3b5cd0da3b982526a47b740402dfcf2668d63a08090d022275aaafddf5ab322912058ff39b662 WHIRLPOOL b374f5a9433824c06423e63651639378fa44aebd8a65a7220864054a47a5c1a8adc54ea645b475fcbdb27681f71e7d54cca9dce9afc42c53b9a92ff6fc947b10
+EBUILD prosody-0.9.4.ebuild 2373 SHA256 514d52cf94e2813324496aa1157c126aaf77488b2253859608b4e9904e3bc12a SHA512 a4c60e35c7c526d0e6bfe306fcd6ae69f1f5a703bd8ff76d1d8bf3bce4cf62d3889aa93673e868cf898083d77aa184b818ed19abc811b66c3a75031f43f7dc27 WHIRLPOOL 958f4306d6e858f4f682a71e7d9398d69cd522dcf79e35718cb52b5d5112597b92a5b73edf763572717866fff5d08e631de56a4ed6ea5ecd8af168eb2c671125
+MISC ChangeLog 5512 SHA256 1a6f6e7e5311642ec61198c53799a28c90904754d4f137e5a38df7a7766631dd SHA512 6c470ee521ade93534abaa131cbe475a53880837e2c604b564dca20fe8d865efe2a285b5e743c2d95a251418f9e9c51cf2d7a45bd53f9d894e9e613c02daeac9 WHIRLPOOL 321efe7a0fc4df87e98c3d87b0ca478fd87b9e54bd5cc456e8220759381acb65e73c65b314035c799411360c570c8f1e3645d22a25225234b8b3389333b8ecb9
 MISC metadata.xml 582 SHA256 37a85a6873262c05dad46b1e54fcbd99827e443ab79490760355e85935ea0cb5 SHA512 7b724b38a4e4e30e0781b8d5e1778c87de713caf8851cab64eced4c8100b31471a5f8e19428b4c8ab8aec8a99d630ba4cac44ecfba296c9931262328be0f6b66 WHIRLPOOL ddbe571844606be360db32468b1ddebda0917e0488096a67881b4898ff226ca5292e055780aedac4cb5c23fc9f55f7c4e16c5da6fdf02a3f4cb4afac311af64b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTTxIfAAoJEEn8cBKl3gOuvnwQAIgMgD3RUCrZoXJkRF6rAJHl
-wqaAp/Rp1xa3X1gdVi3vPTqNAJ1oXhiAm4l15UYlL4ecmZvfAkPaXNkG7fQE350U
-YF8e+pe6VtqKrp0E3mA08ZdQC6KPwqTE7eZ3f1TiylfTFWw9Z0glOVE/53RTgqI8
-tQ02Cq8sPCULxzEiVJ3vF/rtznMyy/F19S4a5Hqw5TDx40TQv0q8Fdc9X33XjvO2
-8leDASBnAE0DuLCA2BxFKY13CUxNnF39MEHEIJhrNcu6BbuW9eCnI68HCas67wnX
-5WTHSW3v0xLZLFss9ro9kuJ+CYYlqBmeqfMnAF2EhLa8l1dv2D8cpWLQ1u04YnT6
-18r4KOphxja0INwsozthWzR9OeLkS9jn/a6NNqXRgIBffoSzRRjciS6eTqpMp52T
-hd1vvfAfz8zUmPnspOZeC2lT8MVXPY32etWjA0FWPq6jAw7bQrJlLuwyDihPEINq
-8cf6eJJIF/84z++yuMETO2t1SU1Uk5PQhf53XyShOYwiSISKQXDN+gFt/5iRkB/A
-4zHpP3V0wiwa6ZFynHLtXdIWoR6yQZ1cHws1B0r0QaplS4J7Hse4sIiCN3uLPQCa
-8fn8GAEsVjP8kLT25HWeyUv+LPAJXvy/E4HFpdqiZHVExKLTEH7WM+Cw4Cz9slhZ
-sU5dXC9mCbYWLjPy9TCj
-=ZUUY
+iQIcBAEBCAAGBQJTTx16AAoJEEn8cBKl3gOugJAQAL9LsM7BFUB6uwR/uhVSwBMr
+PaegkoLvHLqAkWKLGt3Zbh/cQoIJoKMwpdjGR+2acs3vXp/7P38gKJvf1qKGCDva
+KYd2baXK0AYArqkFJXomM5oWErZUWPw4gwPhDzr7ym4W52tuf+AF2XrPNFmaKZAQ
+dvTOCo87MAXK7hpR3vnVbx3bRukscUc6CXeIcLKybKnOSe1amwDjwlyB3Z3P8mk9
+3WAnSMLgAqIdHN3TA4d3JQ2jjWkYMvu5AVryup7AVRnm4QwUMlay4OncrJn0EOla
+/iQuwzYZr1Qwvwznz95kGYED04sCekvoOwXioN2nrYKMcvAkXdG8WS37B0A8toPa
+xg+gJBpcel+mz+r1iKvHb9BC/NpzYZy62igUC2/WsZeM1HGSd3r4wUDuzPz/TgKG
+RKrvedOMKByWnoooPq1H3LQu60nF+AVRew4ngmnrOEKjBA4bIFXdE1dHOZscibdo
+NZA5HTjTJgwM59LMTSPdDwD0V7VjpT+OW7Gjl+5aIExpxXtQ6ZtTWS+GjFjZ8FC9
+IDSuejGhwiKTgDHPnhiCUtnibVYYOe0ldzgqrj7x6z9ROYNC5qSvHYEK+yI9VHZp
+aZIq6bIQRGDWK/59YDQFHQWdl9UjaN6ybdiIH1LW0/5t+dKFvWKX8DQ5GDBFQEv9
+cDxs95AHx/JzgzrjSxVr
+=Asrr
 -----END PGP SIGNATURE-----
