@@ -1,6 +1,9 @@
 # ChangeLog for net-im/prosody
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/prosody/ChangeLog,v 1.35 2014/04/16 23:27:47 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/prosody/ChangeLog,v 1.36 2014/04/17 00:16:17 zx2c4 Exp $
+
+  17 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> prosody-0.9.4.ebuild:
+  Prosody requires newer luaexpat.
 
 *prosody-0.9.4 (16 Apr 2014)
 
