@@ -1,6 +1,11 @@
 # ChangeLog for dev-lua/luaexpat
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lua/luaexpat/ChangeLog,v 1.14 2014/03/04 20:37:39 vincent Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lua/luaexpat/ChangeLog,v 1.15 2014/04/17 00:15:38 zx2c4 Exp $
+
+*luaexpat-1.3.0 (17 Apr 2014)
+
+  17 Apr 2014; Jason A. Donenfeld <zx2c4@gentoo.org> +luaexpat-1.3.0.ebuild:
+  Version bump for prosody.
 
   04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org>
   luaexpat-1.2.0-r1.ebuild:
